--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
-version: '3.8'
-
 services:
   musclerpg:
     build: .
     container_name: musclerpg_app
-    ports:
-      - "8501:8501"
+    network_mode: host
     volumes:
-      # bind-mount project for easy development; remove if you want immutable container
       - ./:/app:cached
     environment:
       - PYTHONUNBUFFERED=1
