--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,25 @@
-__pycache__/
+__pycache__
 *.pyc
 *.pyo
 *.pyd
 .Python
-env/
-venv/
-.venv/
-.git/
-.gitignore
+env
+venv
+.venv
+pip-log.txt
+pip-delete-this-directory.txt
+.tox
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
 *.log
-*.sqlite3
-__pycache__/
-build/
-dist/
-*.egg-info/
-.pytest_cache/
+.git
+.mypy_cache
+.pytest_cache
+.hypothesis
+.DS_Store
+.vscode
+.idea
